# annotated-transformer

./: README.md  anno-trans.py  main.py  pyproject.toml
__marimo__/session/: anno-trans.py.json
